tests/errors/error_01.py
print "This throws Syntax Error!"
